--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/IanIori/js-pi-4sem-api",
   "author": "Galera>",
   "license": "MIT",
-  "type": "module",
+  "type": "commonjs",
   "dependencies": {
     "@types/bcrypt": "^5.0.1",
     "@types/cookie-parser": "^1.4.7",
