--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workshop-node-ts-intro",
+  "nome": "workshop-node-ts-intro",
   "version": "1.0.0",
   "description": "api rest",
   "main": "index.js",
